MLcoursecode(linear regression).ipynb

--- a/MLcoursecode(linear regression).ipynb
+++ b/MLcoursecode(linear regression).ipynb
@@ -89,13 +89,13 @@
         "lifesat.plot(kind='scatter', grid=True,\n",
         "             x=\"GDP per capita (USD)\", y=\"Life satisfaction\")\n",
         "\n",
+        "plt.axis([23_500, 63_500, 4, 9])\n",
         "#visualize the linear regression line\n",
         "xpoints = np.array([20000, 68000])\n",
         "y1=M*20000+C\n",
         "y2=M*68000+C\n",
         "ypoints = np.array([y1, y2])\n",
-        "plt.plot(xpoints, ypoints, color='red')\n",
-        "plt.axis([23_500, 63_500, 4, 9])\n",
+        "plt.plot(xpoints, ypoints, color='red')\n"
         "\n",
         "#taking input value for x\n",
         "x_value= float(input(\"Enter a value: \"))\n",
